--- a/src/pages/products/[...slug].astro
+++ b/src/pages/products/[...slug].astro
@@ -40,7 +40,8 @@ const { images, ...product } = data!;
         <button class="btn-quantity">+</button>
       </div>
 
-      <button class="mt-5 bg-blue-500 text-white p-3 w-full cursor-pointer"
+      <button
+        class="mt-5 bg-blue-500 text-white p-3 w-full cursor-pointer disabled:bg-gray-500"
         >Añadir al carrito</button
       >
 
@@ -55,51 +56,74 @@ const { images, ...product } = data!;
 <script>
   import Swal from "sweetalert2";
 
-  const sizeElements = document.querySelectorAll("li");
+  // import { navigate } from "astro:transitions/client";
+  import { CartCookiesClient } from "@/utils";
+  import { itemsInCart } from "@/store";
 
-  sizeElements.forEach((liElement) => {
-    liElement.addEventListener("click", () => {
-      sizeElements.forEach((s) => s.classList.remove("selected-size"));
-      liElement.classList.add("selected-size");
-    });
-  });
+  document.addEventListener("astro:page-load", () => {
+    const sizeElements = document.querySelectorAll("li");
 
-  const quantityInput = document.querySelector("input") as HTMLInputElement;
-  const productIdInput = document.querySelector(
-    "#product-id"
-  ) as HTMLInputElement;
-
-  let quantity = 1;
-
-  const [decrementButton, incrementButton, addToCardButton] =
-    document.querySelectorAll("button");
-
-  incrementButton.addEventListener("click", () => {
-    quantity = Math.min(quantity + 1, 5);
-    quantityInput.value = quantity.toString();
-  });
-
-  decrementButton.addEventListener("click", () => {
-    quantity = Math.max(quantity - 1, 1);
-    quantityInput.value = quantity.toString();
-  });
-
-  addToCardButton.addEventListener("click", () => {
-    const size = document.querySelector(".selected-size")?.textContent;
-    if (!size) {
-      Swal.fire({
-        icon: "error",
-        title: "Seleccione una talla",
-        text: "",
+    sizeElements.forEach((liElement) => {
+      liElement.addEventListener("click", () => {
+        sizeElements.forEach((s) => s.classList.remove("selected-size"));
+        liElement.classList.add("selected-size");
       });
-    }
+    });
 
-    addToCardButton.disabled = true;
+    const quantityInput = document.querySelector("input") as HTMLInputElement;
+    const productIdInput = document.querySelector(
+      "#product-id"
+    ) as HTMLInputElement;
 
-    console.log({
-      id: productIdInput.value,
-      size: size,
-      quantity: quantity,
+    let quantity = 1;
+
+    const [decrementButton, incrementButton, addToCardButton] =
+      document.querySelectorAll("button");
+
+    if (!incrementButton || !quantityInput) return;
+
+    incrementButton.addEventListener("click", () => {
+      quantity = Math.min(quantity + 1, 5);
+      quantityInput.value = quantity.toString();
+    });
+
+    decrementButton.addEventListener("click", () => {
+      quantity = Math.max(quantity - 1, 1);
+      quantityInput.value = quantity.toString();
+    });
+
+    addToCardButton.addEventListener("click", async () => {
+      const size = document.querySelector(".selected-size")?.textContent;
+      if (!size) {
+        Swal.fire({
+          icon: "error",
+          title: "Seleccione una talla",
+          text: "",
+        });
+      }
+
+      addToCardButton.disabled = true;
+
+      const cart = CartCookiesClient.addItem({
+        productId: +productIdInput.value,
+        size: size!,
+        quantity: quantity,
+      });
+
+      itemsInCart.set(cart.length);
+
+      Swal.fire({
+        icon: "success",
+        title: "Producto añadido al carrito",
+        text: "",
+        showConfirmButton: false,
+        timer: 1000,
+        didClose() {
+          addToCardButton.disabled = false;
+        },
+      });
+
+      // await navigate("/cart");
     });
   });
 </script>
